fix back side of / link not being visible

--- a/static/home.css
+++ b/static/home.css
@@ -29,8 +29,8 @@
 
 * {
     margin: 0;
-    -webkit-backface-visibility:  hidden;
-    backface-visibility: hidden;
+    /* -webkit-backface-visibility:  hidden;
+    backface-visibility: hidden; */
      -webkit-tap-highlight-color:  transparent;
      -webkit-perspective: 1000;
      perspective: inherit;
@@ -670,9 +670,7 @@ pre {
 }
 
 .header_item:hover #header_image {
-    /* filter: invert(100%); */
     transform: rotateY(180deg);
-    /* transform-style: preserve-3d; */
 }
 
 
